add folder store

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-http-backend": "^2.2.1",
+    "immer": "^10.0.2",
     "lodash.debounce": "^4.0.8",
     "moment": "^2.29.4",
     "mui-color-input": "^1.0.6",
