--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,7 @@
     "@typescript-eslint/no-extra-semi": "off",
     "no-console": "warn",
     "spaced-comment": "off",
-    "@typescript-eslint/no-explicit-any": "warn"
+    "@typescript-eslint/no-explicit-any": "warn",
+    "no-unused-vars": "off"
   }
 }
