add form field and filters common

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
     "@typescript-eslint/no-extra-semi": "off",
     "no-console": "warn",
     "spaced-comment": "off",
-    "@typescript-eslint/no-explicit-any": "warn",
-    "no-unused-vars": "off"
+    "no-unused-vars": "off",
+    "@typescript-eslint/no-explicit-any": "warn"
   }
 }
